# pyDataScience

./: .gitignore  README.md
curves/: README.md  pyproject.toml
curves/src/curves.egg-info/: PKG-INFO  SOURCES.txt
curves/tests/: test_curves.py
k_means/: README.md  pyproject.toml
k_means/k_means/: cluster.py
k_means/tests/: test_k_means.py
opt_matching/: README.md  pyproject.toml
opt_matching/opt_matching/: teammates.py
opt_matching/tests/: test_opt_matching.py
pivot_tables/: README.md  pyproject.toml
pivot_tables/pivot_tables/: simple.py  titanic.py
pivot_tables/tests/: test_pivot_tables.py
plotly101/: README.md  pyproject.toml
plotly101/plotly101/: .gitignore  autotimer.py  repostat_chart.py
plotly101/tests/: test_plotly101.py
plotly_dashboard/: README.md  pyproject.toml
plotly_dashboard/src/plotly_dashboard/: basketball_dashboard.py  demo.py
plotly_dashboard/tests/: test_plotly_dashboard.py
simplestreamlit/: .gitignore  README.md  pyproject.toml
simplestreamlit/simplestreamlit/: demo1.py  demo2.py
simplestreamlit/tests/: test_simplestreamlit.py
