[tool.poetry]
name = "k_means"
version = "0.1.0"
description = ""
authors = ["Wei Ning (DA) <wei.ning@digitalasset.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
scikit-learn = "^0.22.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
cluster = "k_means.cluster:main"