[tool.poetry]
name = "pivot_tables"
version = "0.1.0"
description = ""
authors = ["Wei Ning (DA) <wei.ning@digitalasset.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
matplot = "^0.1.9"
PyQt5 = "5.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
simplept = "pivot_tables.simple:main"
titanic = "pivot_tables.titanic:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
