[tool.poetry]
name = "plotly_dashboard"
version = "0.1.0"
description = ""
authors = ["Wei Ning <macgnw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
plotly = "^4.5"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
demo = "plotly_dashboard.demo:main"
