[tool.poetry]
name = "simplestreamlit"
version = "0.1.0"
description = ""
authors = ["Wei Ning (DA) <wei.ning@digitalasset.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.61.0"
yfinance = "^0.1.54"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.30.0"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
